# Frame-Detection

./: CMakeLists.txt  README.md  border.cpp  border.hpp  cropper.cpp  cropper.hpp  main.cpp
